--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
-      rel="stylesheet"
-    />
-    <title>insta-driver</title>
-    <link href="/dist/style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/bundle.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet"/><title>insta-driver</title><link href="/dist/style.css?0c40c34580ee095b0926" rel="stylesheet"></head><body><div id="app"></div><script src="/dist/bundle.js?0c40c34580ee095b0926"></script></body></html>
